# Core

./: .editorconfig  .flake8  .gitignore  Makefile  README.rst  pyproject.toml
Core/: manage.py
Core/core/utils/: collections.py  misc.py  settings.py
Core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
Core/project/settings/templates/: settings.dev.py
